@@ -1,6 +1,11 @@
 # ChangeLog file for clients
 # This file is updated with Maddlog
 
+* Thu Feb  1 2018 Sjoerd Mullender <sjoerd@acm.org>
+- ODBC: Changed table types as used by SQLTables from "LOCAL TEMPORARY"
+  and "GLOBAL TEMPORARY" to "LOCAL TEMPORARY TABLE" and "GLOBAL TEMPORARY
+  TABLE" respectively.
+
 * Wed Jan 31 2018 Sjoerd Mullender <sjoerd@acm.org>
 - ODBC: Initial support for the HUGEINT type in SQL was added.  Any value
   with type HUGEINT can be retrieved in a C variable with type SQL_C_CHAR
